# NMS-Newton

./: .gitignore  LocTable.MXML  README.md  interactions.py  newton.pak  newton.py  pyproject.toml  run.py
METADATA/REALITY/TABLES/: nms_dialog_gcalienpuzzletable.EXML
UI/HUD/SHIP/: HEADSUP.EXML  HEADSUP.MBIN  HEADSUP.MXML
