[project]
name = "NMS-Newton"
description = "Mod for No Man's Sky to make the planets move"
readme = "README.md"
requires-python = ">=3.9, <3.12"
# TODO: Add
license = {file = "LICENSE.md"}
keywords = ["hooking", "games", "hacking", "modding"]
authors = [
  {name = "monkeyman192"}
]
maintainers = [
  {name = "monkeyman192"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "nmspy"
]
version = "0.2.0"

[tool.uv]
python-preference = "only-system"

[tool.setuptools]
packages = []

[project.urls]
Homepage = "https://github.com/monkeyman192/NMS-Newton"
Repository = "https://github.com/monkeyman192/NMS-Newton.git"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8", "setuptools_scm_git_semver"]
build-backend = "setuptools.build_meta"
